# vgemma

./: .gitignore  CMakeLists.txt  README.md
docs/: vulkan_setup.md
shaders/: shader_compiler.bat  shader_compiler_lx.sh  vk_op_relu_f32.comp
srcs/: core.hpp  tensor.cpp  tensor.hpp  vk_context.cpp  vk_context.hpp  vk_op.cpp  vk_op.hpp  vk_op_unary.cpp  vk_op_unary.hpp
tests/: main.cpp
